# upf

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  setup.sh
context/3gpp/: TS29564_Nupf_GetUEPrivateIPaddrAndIdentifiers.yaml
src/: config.rs  far_engine.rs  main.rs  packet_classifier.rs
src/gtpu/: echo.rs  end_marker.rs  error_indication.rs  gpdu.rs  header.rs  mod.rs  n3_handler.rs  n6_handler.rs  types.rs
src/pfcp/: association.rs  header.rs  ie.rs  messages.rs  mod.rs  retry.rs  server.rs  session_manager.rs  types.rs
src/types/: downlink_packet.rs  far.rs  identifiers.rs  mod.rs  pdr.rs  pdu_session_type.rs  priority_queue.rs  qos.rs  routing.rs  session.rs  token_bucket.rs  uplink_packet.rs
