[package]
name = "upf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bytes = "1.9"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
socket2 = "0.5"
pnet = "0.35"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Networking_WinSock"] }
